<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OnF-lZ-lQA">
    <device id="retina4_0" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="AOE-QN-hl2" id="2AJ-eB-dQR"/>
                            <outlet property="delegate" destination="AOE-QN-hl2" id="V1E-rM-42f"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Upcoming Movies" leftItemsSupplementBackButton="YES" id="KNb-4r-EwK">
                        <barButtonItem key="rightBarButtonItem" id="tY0-LK-Ic6">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="EW6-0j-MVm">
                                <rect key="frame" x="221" y="6" width="83" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <state key="normal" title="Language">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="openLanguageTableView" destination="AOE-QN-hl2" eventType="touchUpInside" id="wb0-xG-BdO"/>
                                </connections>
                            </button>
...
